<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="account">Account</string>
    <string name="account_types">Account types</string>
    <string name="account_type_asset">Other assets</string>
    <string name="account_type_bank">Bank</string>
    <string name="account_type_cash">Cash</string>
    <string name="account_type_ccard">Credit card</string>
    <string name="account_type_liability">Other Liabilities</string>
    <string name="account_type_investment">Investments</string>
    <string name="already_defined">%1$s already defined</string>
    <string name="amount">Amount</string>
    <string name="app_name">My Expenses</string>
    <string name="backup_success">Database and preferences successfully written to \"%1$s\".</string>
    <string name="category">Category</string>
    <string name="contrib_feature_ad_free_label">No ads</string>
    <string name="contrib_feature_accounts_unlimited_label">Unlimited number of accounts</string>
    <string name="contrib_feature_attach_picture_label">Attach image to transaction</string>
    <string name="contrib_feature_distribution_label">Pie chart (Distribution per category)</string>
    <string name="contrib_feature_plans_unlimited_label">Unlimited number of plans</string>
    <string name="contrib_feature_print_label">Export transaction list to PDF</string>
    <string name="contrib_feature_csv_import_label">CSV import</string>
    <string name="contrib_feature_split_template_label">Unlimited number of split templates</string>
    <string name="contrib_feature_pro_support_label"><b>Email support</b> with guaranteed response within 2 business days</string>
    <string name="contrib_feature_roadmap_voting_label">Voting right on <b>development roadmap</b></string>
    <string name="contrib_feature_history_label">History chart</string>
    <string name="contrib_feature_category_tree_label">Arbitrarily deep category hierarchy</string>
    <string name="contrib_feature_synchronization_label">Cloud synchronization</string>
    <string name="licence_status_free">Free</string>
    <string name="contrib_key">Contrib Key</string>
    <string name="extended_key">Extended Key</string>
    <string name="contrib_key_requires">Requires %1$s.</string>
    <string name="currency">Currency</string>
    <string name="current_balance">Current balance</string>
    <string name="date">Date</string>
    <string name="date_format">Date format</string>
    <string name="date_format_illegal">Illegal date format</string>
    <string name="number_format_illegal">Illegal number format</string>
    <string name="decimal_separator">Decimal separator</string>
    <string name="default_account_name">Budget Book</string>
    <string name="description">Description</string>
    <string name="dialog_balance_delete">Delete reconciled transactions</string>
    <string name="dialog_confirm_discard_changes">Discard changes?</string>
    <string name="dialog_command_disabled_balance">No cleared transactions to be reconciled.</string>
    <string name="dialog_command_disabled_insert_transfer">Transfer transactions require a second account.</string>
    <string name="dialog_contrib_reminder_remove_limitation">Remove this limitation and access more features by upgrading <i>{app_name}</i>.</string>
    <string name="dialog_contrib_text_1"><i>{app_name}</i> is offered open source.</string>
    <string name="dialog_contrib_text_2">Please contribute by upgrading <i>{app_name}</i> and gain unrestricted access to the following features:</string>
    <string name="dialog_contrib_trial_info" tools:ignore="PluralsCandidate">Your current licence status (%1$s) allows you to try %2$s for %3$d days (until %4$s).</string>
    <string name="dialog_contrib_trial_info_play">This free trial will never convert to any type of subscription.</string>
    <string name="dialog_contrib_subscription_info_play">This subscription takes immediate effect, is billed monthly or yearly and can be cancelled any time.</string>
    <string name="dialog_contrib_usage_limit_accounts" tools:ignore="PluralsCandidate">Your current licence status (%2$s) allows you to create %1$d accounts.</string>
    <string name="dialog_contrib_usage_limit_plans" tools:ignore="PluralsCandidate">Your current licence status (%2$s) allows you to create %1$d plans.</string>
    <string name="dialog_contrib_usage_limit_split_templates">Your current licence status (%1$s) allows you to create 1 split template.</string>
    <string name="dialog_contrib_usage_limit_with_dialog">With your current licence status (%1$s), this dialogue will be displayed on every usage.</string>
    <string name="dialog_export_delete">Delete exported transactions</string>
    <string name="dialog_export_not_yet_exported">Export only transactions not yet exported</string>
    <string name="dialog_password_activate_protection">Activate password protection</string>
    <string name="dialog_password_change_password">Change password</string>
    <string name="dialog_password_new_password">New password</string>
    <string name="dialog_password_new_password_confirmation">New password (confirmation)</string>
    <string name="dialog_remind_later">Later</string>
    <string name="dialog_remind_rate_how_many_stars">How many stars would you give to {app_name}?</string>
    <string name="dialog_remind_rate_1">Please take a moment to rate and review {app_name}.</string>
    <string name="dialog_remind_rate_2">Your comments allow us to continually add improvements and enhancements.</string>
    <string name="dialog_remind_rate_1_suggest_improvement">Please take a moment to send us your suggestions for improvements.</string>
    <string name="dialog_remind_rate_yes">Rate now</string>
    <string name="dialog_security_answer">Answer</string>
    <string name="dialog_security_question">Question</string>
    <string name="dialog_title_balance_account">Balance %1$s</string>
    <string name="dialog_title_contrib_feature">Premium feature</string>
    <plurals name="dialog_title_warning_delete_account">
        <item quantity="one">Delete account?</item>
        <item quantity="other">Delete %1$d accounts?</item>
    </plurals>
    <string name="dialog_title_warning_delete_category">Delete category?</string>
    <string name="dialog_title_warning_delete_template">Delete template?</string>
    <string name="dialog_title_warning_delete_transaction">Delete transaction?</string>
    <string name="expense">Expense</string>
    <string name="export_sdcard_failure">Export to file \"%1$s\" failed: %2$s</string>
    <string name="export_sdcard_success">Data successfully exported to file \"%1$s\"</string>
    <string name="feedback">Feedback</string>
    <string name="ftp_uri_malformed">Malformed URI %1$s</string>
    <string name="grisbi_import_categories_loading">Loading categories from %1$s</string>
    <string name="grisbi_import_parties_loading">Loading parties from %1$s</string>
    <string name="grouping_day">Day</string>
    <string name="grouping_last_week">Last week</string>
    <string name="grouping_month">Month</string>
    <string name="grouping_none">Ungrouped</string>
    <string name="grouping_this_week">This week</string>
    <string name="grouping_week">Week</string>
    <string name="grouping_year">Year</string>
    <string name="help_button_rate">Rate or review</string>
    <string name="help_heading_credits">Credits</string>
    <string name="help_heading_whats_new">What\'s new</string>
    <string name="import_select_transactions">Transactions</string>
    <string name="income">Income</string>
    <string name="label">Label</string>
    <string name="licence_validation_failure">Unable to validate licence key.</string>
    <string name="licence_validation_success">Licence key successfully validated:</string>
    <string name="licence_validation_premium">Premium features have been unlocked.</string>
    <string name="menu_aggregates">Total</string>
    <string name="menu_apply_template">Apply</string>
    <string name="menu_back">Back</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_balance">Balance account</string>
    <string name="menu_cancel_plan_instance">Cancel</string>
    <string name="menu_clone_transaction">Clone</string>
    <string name="menu_contrib">Contribute</string>
    <string name="menu_create_account">New account</string>
    <string name="menu_create_instance_edit">Apply and edit</string>
    <string name="menu_create_instance_save">Apply and save</string>
    <string name="menu_create_main_cat">New main category</string>
    <string name="menu_create_method">New payment method</string>
    <string name="menu_create_party">New party</string>
    <string name="menu_create_split">New split</string>
    <string name="menu_create_split_part_category">New category split</string>
    <string name="menu_create_split_part_transfer">New transfer split</string>
    <string name="menu_create_sub_cat">New sub category</string>
    <string name="menu_create_template">New template</string>
    <string name="menu_create_template_from_transaction">Save as template</string>
    <string name="menu_create_template_for_transaction">New transaction template</string>
    <string name="menu_create_template_for_transfer">New transfer template</string>
    <string name="menu_edit_plan_instance">Edit single plan occurrence</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_grouping">Grouping</string>
    <string name="menu_help">Help</string>
    <string name="menu_manage_plans">Templates and plans</string>
    <string name="menu_reset_plan_instance">Reset</string>
    <string name="menu_share">Tell a friend</string>
    <string name="menu_split_transaction">Transform to split</string>
    <string name="method">Payment method</string>
    <string name="payer_or_payee">Counterparty</string>
    <string name="pref_sort_order_usages">Count of usages</string>
    <string name="pref_category_title_import">Import</string>
    <string name="pref_manage_categories_title">Categories</string>
    <string name="pref_manage_parties_title">Parties</string>
    <string name="pref_restore_title">Restore</string>
    <string name="status">Status</string>
    <string name="title">Title</string>
    <string name="transfer">Transfer</string>
    <string name="type">Type</string>
    <string name="menu_categories_setup_default">Setup default categories</string>
    <string name="menu_undelete_transaction">Undelete</string>
    <string name="pref_sort_order_last_used">Last used</string>
    <string name="pref_sort_order_custom">Custom</string>
    <string name="synchronization">Synchronization</string>
    <string name="pref_tracking_summary">Allow us to collect anonymous data about usage patterns that helps us plan improvements.</string>
    <string name="pref_tracking_title">Usage data collection</string>
    <string name="onboarding_restore_from_cloud">Restore from cloud synchronization</string>
    <string name="onboarding_restore_from_local">Restore local backup file</string>
    <string name="menu_ungroup_split_transaction">Ungroup split</string>
    <string name="menu_budget">Budgeting</string>
    <string name="onboarding_privacy_intro">Your financial data is not sent to any server, neither operated by us nor by any third party.</string>
    <string name="menu_remap">Remap</string>
    <string name="crash_reports_user_info">{app_name} will send reports about application crashes automatically to its developers, which allows them to fix problems more quickly.</string>
    <string name="pref_category_title_crash_reports">Crash reports</string>
    <string name="menu_parent_category_selection">Select parent category on short tap</string>
    <string name="menu_aggregate_neutral_categories">Aggregate neutral categories</string>
    <string name="menu_show_equivalent_value">Equivalent value</string>
    <string name="balance_sheet">Balance Sheet</string>
</resources>