<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/SORT_COMMAND"
        android:title="@string/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@id/SORT_TITLE_COMMAND" android:title="@string/title"/>
                <item android:id="@id/SORT_USAGES_COMMAND" android:title="@string/pref_sort_order_usages"/>
                <item android:id="@id/SORT_LAST_USED_COMMAND" android:title="@string/pref_sort_order_last_used"/>
                <item android:id="@id/SORT_AMOUNT_COMMAND" android:visible="false" android:title="@string/amount" />
                <item android:id="@id/SORT_CUSTOM_COMMAND" android:visible="false" android:title="@string/pref_sort_order_custom" />
            </group>
        </menu>

    </item>
</menu>