<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of My Expenses.
  My Expenses is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  My Expenses is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with My Expenses.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/BACK_COMMAND"
        android:icon="@drawable/ic_menu_back"
        android:title="@string/menu_back"
        app:showAsAction="always"/>
    <item
        android:id="@id/FORWARD_COMMAND"
        android:icon="@drawable/ic_menu_forward"
        android:title="@string/menu_forward"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_filter"
        android:id="@id/TYPE_FILTER_COMMAND"
        android:title="@string/type"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@id/FILTER_EXPENSE_COMMAND"
                    android:title="@string/expense" />
                <item
                    android:id="@id/FILTER_INCOME_COMMAND"
                    android:title="@string/income" />
            </group>
            <item
                android:checkable="true"
                android:id="@id/AGGREGATE_COMMAND"
                android:title="@string/menu_aggregate_neutral_categories" />
        </menu>
    </item>
    <item
        android:id="@id/TOGGLE_CHART_COMMAND"
        app:showAsAction="never"
        android:checkable="true"
        android:title="@string/menu_distribution_show_pie_char"/>
</menu>