<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of My Expenses.
  My Expenses is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  My Expenses is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with My Expenses.  If not, see <http://www.gnu.org/licenses/>
 -->
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/CREATE_PLAN_INSTANCE_SAVE_COMMAND"
        android:icon="@drawable/ic_action_apply_save"
        android:orderInCategory="1"
        android:title="@string/menu_create_instance_save"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@id/CANCEL_PLAN_INSTANCE_COMMAND"
        android:icon="@drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="10"
        android:title="@string/menu_cancel_plan_instance"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@id/RESET_PLAN_INSTANCE_COMMAND"
        android:icon="@drawable/ic_menu_revert"
        android:orderInCategory="15"
        android:title="@string/menu_reset_plan_instance"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@id/CREATE_PLAN_INSTANCE_EDIT_COMMAND"
        android:icon="@drawable/ic_action_apply_edit"
        android:orderInCategory="3"
        android:title="@string/menu_create_instance_edit"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@id/EDIT_PLAN_INSTANCE_COMMAND"
        android:icon="@drawable/ic_menu_edit"
        android:orderInCategory="2"
        android:title="@string/menu_edit_plan_instance"
        app:showAsAction="ifRoom">
    </item>
</menu>
