<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of My Expenses.
  My Expenses is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  My Expenses is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with My Expenses.  If not, see <http://www.gnu.org/licenses/>.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/ic_filter"
        android:id="@id/TYPE_FILTER_COMMAND"
        android:title="@string/type"
        app:showAsAction="always"
        />
    <item
        android:id="@id/SETUP_CATEGORIES_DEFAULT_COMMAND"
        android:icon="@drawable/ic_menu_add_list"
        android:title="@string/menu_categories_setup_default"
        app:showAsAction="never" />
    <item
        android:id="@+id/EXPORT_COMMAND"
        android:icon="@drawable/ic_menu_download"
        app:showAsAction="never"
        tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@id/EXPORT_CATEGORIES_COMMAND_UTF8"
                android:title="UTF-8"
                tools:ignore="HardcodedText" />
            <item
                android:id="@id/EXPORT_CATEGORIES_COMMAND_ISO88591"
                android:title="ISO-8859-1"
                tools:ignore="HardcodedText" />
        </menu>
    </item>
    <item
        android:id="@id/SORT_COMMAND"
        android:icon="@drawable/ic_menu_sort"
        android:title="@string/display_options_sort_list_by"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@id/SORT_LABEL_COMMAND"
                    android:title="@string/label" />
                <item
                    android:id="@id/SORT_USAGES_COMMAND"
                    android:title="@string/pref_sort_order_usages" />
                <item
                    android:id="@id/SORT_LAST_USED_COMMAND"
                    android:title="@string/pref_sort_order_last_used" />
            </group>
        </menu>
    </item>
    <item
        android:id="@id/TOGGLE_PARENT_CATEGORY_SELECTION_ON_TAP"
        app:showAsAction="never"
        android:checkable="true"
        android:title="@string/menu_parent_category_selection"/>
</menu>
