<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/SetupMain"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/pref_restore_title"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/SetupFromRemote"
                android:title="@string/onboarding_restore_from_cloud">
                <menu />
            </item>
            <item
                android:id="@+id/SetupFromLocal"
                android:title="@string/onboarding_restore_from_local" />
        </menu>
    </item>
    <item
        android:visible="@bool/fints"
        android:id="@+id/Banking"
        android:title="Banking"
        app:showAsAction="always" />
</menu>