<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2011 Denis Solonenko.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v2.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  -->
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:id="@+id/import_select_types"
        android:gravity="center_vertical">

        <TextView
            style="@style/FormLabel"
            android:text="@string/pref_category_title_import"/>

        <LinearLayout
            style="@style/FormField"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/import_select_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pref_manage_categories_title"/>

            <CheckBox
                android:id="@+id/import_select_parties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pref_manage_parties_title"/>

            <CheckBox
                android:id="@+id/import_select_transactions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/import_select_transactions"/>
        </LinearLayout>
    </TableRow>
</merge>