<?xml version="1.0" encoding="utf-8"?><!--
  This file is part of My Expenses.
  My Expenses is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  My Expenses is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with My Expenses.  If not, see <http://www.gnu.org/licenses/>.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@id/MANAGE_TEMPLATES_COMMAND"
        android:icon="@drawable/ic_menu_template"
        android:orderInCategory="11"
        android:title="@string/menu_manage_plans"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/BUDGET_COMMAND"
        android:icon="@drawable/ic_budget"
        android:orderInCategory="12"
        android:title="@string/menu_budget"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/MANAGE_PARTIES_COMMAND"
        android:orderInCategory="15"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle" />
    <item
        android:id="@id/SHARE_COMMAND"
        android:orderInCategory="40"
        android:title="@string/menu_share"
        app:showAsAction="never" />
    <item
        android:id="@id/SETTINGS_COMMAND"
        android:orderInCategory="40"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@id/BACKUP_COMMAND"
        android:orderInCategory="40"
        android:title="@string/menu_backup"
        app:showAsAction="never" />
</menu>
